--- a/platformio.ini
+++ b/platformio.ini
@@ -16,8 +16,11 @@ framework = arduino
 monitor_speed = 115200
 lib_deps = 
 	https://github.com/me-no-dev/ESPAsyncWebServer.git
+	knolleary/PubSubClient@^2.8
 	ropg/ezTime@^0.8.3
 	thijse/ArduinoLog@^1.1.1
+	bblanchon/ArduinoJson@^6.19.4
+	bblanchon/StreamUtils@^1.6.3
 	ayushsharma82/AsyncElegantOTA@^2.2.6
 build_flags = -DCORE_DEBUG_LEVEL=4
 
