--- a/platformio.ini
+++ b/platformio.ini
@@ -24,15 +24,16 @@ lib_deps =
 	ayushsharma82/AsyncElegantOTA@^2.2.6
 build_flags = -DCORE_DEBUG_LEVEL=4
 
-
 [env:esp8266]
 platform = espressif8266
 board = esp12e
-lib_deps =
-    ${env.lib_deps}
+lib_deps = 
+	${env.lib_deps}
+	adafruit/Adafruit PWM Servo Driver Library@^2.4.1
 
 [env:esp32]
 platform = espressif32
 board = esp32doit-devkit-v1
-lib_deps =
-    ${env.lib_deps}
+lib_deps = 
+	${env.lib_deps}
+	adafruit/Adafruit PWM Servo Driver Library@^2.4.1
